<resources>
    <string name="app_name" translatable="false">Tribune</string>
    <string name="tribune_title" translatable="false">Tribune</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="no_account"><u>Don\'t have an account?</u></string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="have_account"><u>Already have an account?</u></string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="please_wait">Please wait</string>
    <string name="authentication">Authentication</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="error_occurred">Error occurred</string>
    <string name="hater" translatable="false">Hater</string>
    <string name="promoter" translatable="false">Promoter</string>
    <string name="getting_ideas">Getting ideas</string>
    <string name="try_again">Try again</string>
    <string name="no_idea">There is no ideas yet. Create your</string>
    <string name="create_idea">Create Idea</string>
    <string name="hint_content">Enter text for your Idea (100 letters)</string>
    <string name="add_link">Add link</string>
    <string name="post_idea">Post Idea</string>
    <string name="image_uploading">Image uploading</string>
    <string name="cant_upload_image">Image can\'t be uploaded</string>
    <string name="create_new_idea">Creating the new idea</string>
    <string name="success_idea">Idea created successfully</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="registration">Registration</string>
    <string name="registration_failed">Registration failed</string>
    <string name="add_avatar">Add avatar:</string>
    <string name="ok" translatable="false">OK</string>
    <string name="set_avatar">Set avatar</string>
    <string name="vote_once">You can vote only once</string>
    <string name="loaded_all_ideas">Loaded all ideas</string>
    <string name="getting_votes">Getting votes</string>
    <string name="gp_unavailable">Google Play services unavailable</string>
    <string name="logout">Log out</string>
    <string name="no_idea_user">This user hasn\'t added any ide yet.</string>
    <string-array name="post_item_list">
        <item>Take a photo</item>
        <item>Choose from gallery</item>
        <item>Cancel</item>
    </string-array>
</resources>
